deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p3-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: p3-app
  template:
    metadata:
      labels:
        app: p3-app
    spec:
      containers:
        - name: p3-app-container
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
