service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3-service
spec:
  selector:
    app: p3-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
