ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p3-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: p3-service
                port:
                  number: 80
  
  defaultBackend:
    service:
      name: p3-service
      port:
        number: 80
